[gd_scene load_steps=2 format=3 uid="uid://dppsonjdlmlsc"]

[ext_resource type="Script" path="res://world_generation/world_gen.gd" id="1_0y1cc"]

[node name="WorldGenScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0y1cc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.0
offset_top = -388.0
offset_right = 352.0
offset_bottom = 469.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.580392)

[node name="GenerateWorldLabel" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.444444
anchor_top = 0.179012
anchor_right = 0.551215
anchor_bottom = 0.214506
text = "Generate World"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AltitudeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.318576
anchor_top = 0.570988
anchor_right = 0.425347
anchor_bottom = 0.606481
text = "Seed"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AltitudeSeedText" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.431424
anchor_top = 0.560185
anchor_right = 0.578993
anchor_bottom = 0.617284
metadata/_edit_use_anchors_ = true

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -198.0
offset_right = 43.0
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonContainer"]
layout_mode = 2

[node name="GenerateButton" type="Button" parent="ButtonContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Generate!"
metadata/_edit_use_anchors_ = true

[node name="PlayButton" type="Button" parent="ButtonContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
disabled = true
text = "Play!"
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="Button" parent="."]
layout_mode = 2
anchor_top = 0.0803571
anchor_bottom = 0.0803571
offset_left = 854.0
offset_top = 845.0
offset_right = 939.0
offset_bottom = 876.0
focus_mode = 0
text = "Back"
metadata/_edit_use_anchors_ = true

[node name="OptionsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -97.0
offset_top = -362.0
offset_right = 97.0
offset_bottom = -331.0
grow_horizontal = 2
grow_vertical = 0

[node name="WorldSize" type="HBoxContainer" parent="OptionsContainer"]
layout_mode = 2

[node name="WorldSizeLabel" type="Label" parent="OptionsContainer/WorldSize"]
layout_mode = 2
text = "World Size"
metadata/_edit_use_anchors_ = true

[node name="WorldSizeOptions" type="OptionButton" parent="OptionsContainer/WorldSize"]
layout_mode = 2
focus_mode = 0
item_count = 4
selected = 0
popup/item_0/text = "Tiny"
popup/item_0/id = 0
popup/item_1/text = "Small"
popup/item_1/id = 1
popup/item_2/text = "Medium"
popup/item_2/id = 2
popup/item_3/text = "Large"
popup/item_3/id = 3
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(500, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -144.0
offset_right = 20.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2

[node name="MapTexture" type="TextureRect" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 250)
layout_mode = 2
expand_mode = 2
stretch_mode = 5
flip_v = true
metadata/_edit_use_anchors_ = true

[node name="RandomButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 158.0
offset_top = 72.0
offset_right = 231.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
text = "Random"

[connection signal="pressed" from="ButtonContainer/VBoxContainer/GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="pressed" from="ButtonContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="item_selected" from="OptionsContainer/WorldSize/WorldSizeOptions" to="." method="_on_world_size_options_item_selected"]
[connection signal="pressed" from="RandomButton" to="." method="_on_random_button_pressed"]
